--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 Diapositivas/Semana_1v1.pdf
 Diapositivas/sesion2v1.pdf
 EscalaDeValores.pdf
+Reportes Articulos/Resumen_artículo1.aux
+Reportes Articulos/Resumen_artículo1.bbl
+Reportes Articulos/Resumen_artículo1.blg
+Reportes Articulos/Resumen_artículo1.dvi
+Reportes Articulos/Resumen_artículo1.log
+Reportes Articulos/Resumen_artículo1.out
+Reportes Articulos/Resumen_artículo1.synctex.gz
