--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Reportes Articulos/Resumen_artículo1.dvi
 Reportes Articulos/Resumen_artículo1.log
 Reportes Articulos/Resumen_artículo1.out
 Reportes Articulos/Resumen_artículo1.synctex.gz
+Diapositivas/Grid(1).pdf
