--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Reportes Articulos/Resumen_artículo1.log
 Reportes Articulos/Resumen_artículo1.out
 Reportes Articulos/Resumen_artículo1.synctex.gz
 Diapositivas/Grid(1).pdf
+Diapositivas/ArquitecturaGPUs.pdf
