Ejercicios de OpenMP y reporte

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Reportes Articulos/1/Resumen_artículo1.out
 Reportes Articulos/1/Resumen_artículo1.synctex.gz
 Diapositivas/Grid(1).pdf
 Diapositivas/ArquitecturaGPUs.pdf
+Diapositivas/PresentacionOpenMP.pdf
