--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Reportes Articulos/1/Resumen_artículo1.synctex.gz
 Diapositivas/Grid(1).pdf
 Diapositivas/ArquitecturaGPUs.pdf
 Diapositivas/PresentacionOpenMP.pdf
+Diapositivas/introduccion_mpi.pdf
