Segundo Artículo y resúmen

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ Diapositivas/Grid(1).pdf
 Diapositivas/ArquitecturaGPUs.pdf
 Diapositivas/PresentacionOpenMP.pdf
 Diapositivas/introduccion_mpi.pdf
+Reportes Articulos/2/Resumen_artículo2.aux
+Reportes Articulos/2/Resumen_artículo2.bbl
+Reportes Articulos/2/Resumen_artículo2.blg
+Reportes Articulos/2/Resumen_artículo2.log
+Reportes Articulos/2/Resumen_artículo2.out
+Reportes Articulos/2/Resumen_artículo2.synctex.gz
+
