--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,8 @@ Reportes Articulos/2/Resumen_artículo2.blg
 Reportes Articulos/2/Resumen_artículo2.log
 Reportes Articulos/2/Resumen_artículo2.out
 Reportes Articulos/2/Resumen_artículo2.synctex.gz
+Glosario/Glosario.aux
+Glosario/Glosario.log
+Glosario/Glosario.out
+Glosario/Glosario.synctex.gz
 
