Se eliminan artículos por cuestión de protección

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Reportes Articulos/1/Resumen_artículo1.dvi
 Reportes Articulos/1/Resumen_artículo1.log
 Reportes Articulos/1/Resumen_artículo1.out
 Reportes Articulos/1/Resumen_artículo1.synctex.gz
+Reportes Articulos/1/New sequential and parallel algorithms for computing the b-spectrum.pdf
 Diapositivas/Grid(1).pdf
 Diapositivas/ArquitecturaGPUs.pdf
 Diapositivas/PresentacionOpenMP.pdf
@@ -18,9 +19,9 @@ Reportes Articulos/2/Resumen_artículo2.blg
 Reportes Articulos/2/Resumen_artículo2.log
 Reportes Articulos/2/Resumen_artículo2.out
 Reportes Articulos/2/Resumen_artículo2.synctex.gz
+Reportes Articulos/2/From evolutionary computation to the evolution of things.pdf
 Glosario/Glosario.aux
 Glosario/Glosario.log
 Glosario/Glosario.out
 Glosario/Glosario.synctex.gz
-
 Diapositivas/Repaso_ModeloHibrido.pdf
