Actualización de archivos excluidos

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Glosario/Glosario.log
 Glosario/Glosario.out
 Glosario/Glosario.synctex.gz
 Diapositivas/Repaso_ModeloHibrido.pdf
+Diapositivas/presentacion_CUDA.pdf
