--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ Glosario/Glosario.out
 Glosario/Glosario.synctex.gz
 Diapositivas/Repaso_ModeloHibrido.pdf
 Diapositivas/presentacion_CUDA.pdf
+Reportes Articulos/3/ Parallelizing Motion JPEG 2000 with CUDA .pdf
+Reportes Articulos/3/Resumen_artículo3.aux
+Reportes Articulos/3/Resumen_artículo3.bbl
+Reportes Articulos/3/Resumen_artículo3.blg
+Reportes Articulos/3/Resumen_artículo3.log
+Reportes Articulos/3/Resumen_artículo3.out
+Reportes Articulos/3/Resumen_artículo3.synctex.gz
+
+
