--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ Reportes Articulos/3/Resumen_artículo3.out
 Reportes Articulos/3/Resumen_artículo3.synctex.gz
 
 
+Aplicacion/In-vivo Optical Tomography of Small Scattering Specimens: time-lapse 3D imaging of the head eversion .pdf
+Aplicacion/Solar flare detection system based on tolerance near sets in a GPU–CUDA framework.pdf
