--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,18 @@ Reportes Articulos/3/Resumen_artículo3.blg
 Reportes Articulos/3/Resumen_artículo3.log
 Reportes Articulos/3/Resumen_artículo3.out
 Reportes Articulos/3/Resumen_artículo3.synctex.gz
-
-
 Aplicacion/In-vivo Optical Tomography of Small Scattering Specimens: time-lapse 3D imaging of the head eversion .pdf
 Aplicacion/Solar flare detection system based on tolerance near sets in a GPU–CUDA framework.pdf
+Ejercicios/CUDA/nohup.out
+Proyecto/Documento/Proyecto_Camilo_Rivera.aux
+Proyecto/Documento/Proyecto_Camilo_Rivera.log
+Proyecto/Documento/Proyecto_Camilo_Rivera.out
+Proyecto/Documento/Proyecto_Camilo_Rivera.tcp
+Proyecto/Documento/Proyecto_Camilo_Rivera.toc
+Proyecto/Documento/Proyecto_Camilo_Rivera.tps
+Diapositivas/AplicacionesHPC.pdf
+Diapositivas/Rendimiento.pdf
+Diapositivas/SharedMemory.pdf
+Diapositivas/presentacion_CUDAv1.pdf
+Diapositivas/ResumenCUDA(1).pdf
+
