--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ Diapositivas/SharedMemory.pdf
 Diapositivas/presentacion_CUDAv1.pdf
 Diapositivas/ResumenCUDA(1).pdf
 
+Proyecto/Documento/Proyecto_Camilo_Rivera.bbl
+Proyecto/Documento/Proyecto_Camilo_Rivera.blg
+Proyecto/Documento/Proyecto_Camilo_Rivera.brf
+Proyecto/Documento/Proyecto_Camilo_Rivera.synctex.gz
