Modificaciones finales proyecto final

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,13 @@ Proyecto/Documento/Proyecto_Camilo_Rivera.bbl
 Proyecto/Documento/Proyecto_Camilo_Rivera.blg
 Proyecto/Documento/Proyecto_Camilo_Rivera.brf
 Proyecto/Documento/Proyecto_Camilo_Rivera.synctex.gz
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.aux
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.bbl
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.blg
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.log
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.nav
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.out
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.snm
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.tcp
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.toc
+Proyecto/Presentacion/Beam_Pres_Camilo_Rivera.tps
